admin page front

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,7 +19,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div th:insert="~{fragments/common :: header}"></div>
-            <div th:insert="~{fragments/admin :: userpanel-admin}"></div>
+            <div th:insert="~{fragments/admin :: adminpanel-index}"></div>
             <div class="card-body">
 
                 <div th:insert="~{fragments/admin :: admintables}"></div>
