--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -17,7 +17,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div th:insert="~{fragments/common :: header}"></div>
-            <div th:insert="~{fragments/common :: panel-links}"></div>
+            <div th:insert="~{fragments/user :: userpanel-links}"></div>
             <article class="card-body mx-auto" style="max-width: 400px;">
                 <div>
                     <h3 class="text-center" th:text="#{'message.request-page.header.'+${header}}"></h3>
