--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,8 +16,9 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div th:insert="~{fragments/common :: header}"></div>
+            <div th:insert="~{fragments/common :: panel-links}"></div>
             <div>
-                <h3 id="login-header" class="text-center" th:text="#{'message.error-page.header.' + ${errorCode}}">
+                <h3 id="login-header" class="text-center" th:text="#{'message.error-page.header'} +' '+ ${errorCode}">
                     Header</h3>
             </div>
             <div th:with="errorMessage='message.error.'+${errorCode}" class="card-body">
