--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -34,16 +34,21 @@
     <div>
         <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
         <a id="toAdminPage"
-           th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/' }"
+           th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/'
+           || #httpServletRequest.requestURI == '/index/rooms'
+           || #httpServletRequest.requestURI == '/index/request/new'}"
            sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
            th:href="@{/admin}" class="btn header-button btn-dark rightContainer">Admin</a>
-        <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'}"
+        <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'
+        || #httpServletRequest.requestURI == '/admin/rooms'
+        || #httpServletRequest.requestURI == '/admin/rooms/new'}"
            sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
            th:href="@{/index}" class="btn header-button btn-dark rightContainer">Admin</p>
         </a>
-        <a id="toHomePage" th:if="${#httpServletRequest.requestURI == '/rooms' ||
-    #httpServletRequest.requestURI == '/request/new' ||
-    #httpServletRequest.requestURI == '/rooms/new'}"
+        <a id="toHomePage" th:if="${#httpServletRequest.requestURI == 'admin/rooms' ||
+    #httpServletRequest.requestURI == 'user/request/new' ||
+    #httpServletRequest.requestURI == 'admin/rooms/new'  ||
+    #httpServletRequest.requestURI == 'user/rooms'}"
            th:text="#{message.roomslist-page.button.home}"
            th:href="@{/index}" class="btn header-button btn-dark rightContainer">Home</p>
         </a>
