--- a/src/main/resources/templates/suitable-rooms.html
+++ b/src/main/resources/templates/suitable-rooms.html
@@ -18,27 +18,8 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-
-            <div id="header" class="card-header card-header-flex">
-                <h3 id="index-header" class="text-center"
-                    th:text="#{message.fittingrooms-page.header}">Possible rooms</h3>
-                <div class="card-header-flex">
-                    <div class="language">
-                        <span th:text="#{message.change-language}+': '"></span>
-                        <a th:href="@{'/language?lang=en'}">
-                            <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
-                        </a> <span> /</span>
-                        <a th:href="@{'/language?lang=ru'}">
-                            <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
-                        </a>
-                    </div>
-                    <form name="logoutForm" th:action="@{/logout}" method="post">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                        <input type="submit" class="btn header-button btn-dark" th:value="#{message.signout}"/>
-                    </form>
-                </div>
-            </div>
-
+            <div th:insert="~{fragments/common :: header}"></div>
+            <div id="adminpanel-links" th:insert="~{fragments/admin :: adminpanel-links}"></div>
             <div class="card-body">
                 <p class="white" th:if="${roomsList.isEmpty()}"
                    th:text="#{message.fittingrooms-page.nofitting}">There are no fitting rooms</p>
@@ -59,7 +40,7 @@
                             <td th:text="#{'message.capacity.'+${room.capacity}}"></td>
                             <td th:text="#{'message.class.'+${room.classID}}"></td>
 
-                            <td th:text="${room.price}"></td>
+                            <td th:text="'$'+${room.price}"></td>
                             <td>
                                 <form th:action="@{/admin/suitable-rooms/pick}" th:object="${reservation}"
                                       method="post">
@@ -78,22 +59,9 @@
                 </table>
 
             </div>
-            <div class="card-footer">
-                <a th:href="@{/admin}" class="btn btn-info float-left">Back</a>
-                <div class="text-right">
-                    <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}"
-                       th:text="#{message.index-page.admin}"
-                       class="btn btn-info">Admin
-                        menu</a>
-                </div>
-            </div>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="@{/js/hotel.js}"></script>
-
-
 </body>
 </html>
