back button added

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -117,6 +117,7 @@
                     </div>
                 </form>
             </article>
+            <div class="footer" th:insert="~{fragments/common :: footer}"></div>
         </div>
     </div>
 </div>
