--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -32,20 +32,9 @@
 
 <div th:fragment="footer" class="card-footer">
     <div>
+        <a class="btn admin-mode-btn btn-warning center-align" sec:authorize="hasRole('ADMIN')" id="admin-mode-btn" th:text="#{message.button.admin-menu}"></a>
+
         <input onclick="back()" class="btn header-button btn-dark" th:value="#{message.back}"/>
-        <a id="toAdminPage"
-           th:if="${#httpServletRequest.requestURI == '/index' || #httpServletRequest.requestURI == '/'
-           || #httpServletRequest.requestURI == '/index/rooms'
-           || #httpServletRequest.requestURI == '/index/request/new'}"
-           sec:authorize="hasRole('ADMIN')" th:text="#{message.index-page.admin}"
-           th:href="@{/admin}" class="btn header-button btn-dark rightContainer">Admin</a>
-        <a id="toUserPage" th:if="${#httpServletRequest.requestURI == '/admin'
-        || #httpServletRequest.requestURI == '/admin/rooms'
-        || #httpServletRequest.requestURI == '/admin/rooms/new'
-        || #httpServletRequest.requestURI == '/admin/rooms/newsuitable-rooms'}"
-           sec:authorize="hasRole('ADMIN')" th:text="#{message.admin-page.user}"
-           th:href="@{/index}" class="btn header-button btn-dark rightContainer">Admin</p>
-        </a>
         <a id="toHomePage" th:if="${#httpServletRequest.requestURI == 'admin/rooms' ||
     #httpServletRequest.requestURI == 'user/request/new' ||
     #httpServletRequest.requestURI == 'admin/rooms/new'  ||
