--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,9 +14,8 @@
 <body>
 <div class="container">
     <div class="d-flex justify-content-center h-100">
-        <div class="card">
+        <div class="card error-page">
             <div th:insert="~{fragments/common :: header}"></div>
-            <div id="userpanel-links" th:insert="~{fragments/user :: userpanel-links}"></div>
             <div>
                 <h3 id="login-header" class="text-center" th:text="#{'message.error-page.header'} +' '+ ${errorCode}">
                     Header</h3>
