--- a/src/main/resources/templates/today-users.html
+++ b/src/main/resources/templates/today-users.html
@@ -60,20 +60,20 @@
                     <ul class="pagination justify-content-center">
                         <li class="page-item" th:classappend="${pagedList.isFirst()} ? disabled">
                             <a class="page-link"
-                               th:href="@{users(page=${pagedList.number})}"
+                               th:href="@{admin/today-users(page=${pagedList.number})}"
                                tabindex="-1"><
                             </a>
                         </li>
                         <li th:each="pageNumber : ${pageNumbers}" class="page-item"
                             th:classappend="${pageNumber==pagedList.number + 1} ? disabled">
                             <a class="page-link"
-                               th:href="@{users(page=${pageNumber})}"
+                               th:href="@{/admin/today-users(page=${pageNumber})}"
                                th:text="${pageNumber}">
                             </a>
                         </li>
                         <li class="page-item" th:classappend="${pagedList.isLast()} ? disabled">
                             <a class="page-link"
-                               th:href="@{users(page=${pagedList.number}+2)}"
+                               th:href="@{/admin/today-users(page=${pagedList.number}+2)}"
                             >>
                             </a>
                         </li>
