--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -142,6 +142,11 @@ h3 {
     justify-content: left;
 }
 
+#footer-btns{
+    display: flex !important;
+    justify-content: space-between !important;
+}
+
 .language {
     padding-top: 19px;
 }
@@ -238,7 +243,7 @@ h3 {
     height: -webkit-fill-available;
     margin-bottom: auto;
     width: auto;
-    min-width: 855px;
+    min-width: 1070px;
     background-color: rgba(0, 0, 0, 0.6) !important;
 }
 
