--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -94,7 +94,7 @@
                         <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
                         <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                         <td>
-                            <a th:href="@{'/request/edit/'+${request.id}}"
+                            <a th:href="@{'/index/request/edit/'+${request.id}}"
                                th:text="#{message.edit}"
                                class="btn btn-info center-align">Edit</a>
                         </td>
@@ -161,7 +161,7 @@
                         <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                         <td>
                             <a th:text="#{message.view}"
-                               th:href="@{'/request/view/'+${request.id}}"
+                               th:href="@{'/index/request/view/'+${request.id}}"
                                class="btn btn-info float-center">view</a>
                         </td>
                         <td th:text="#{'message.status.'+${request.reservation.status}}"></td>
