--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -8,7 +8,7 @@
 <div th:fragment="header" id="header" class="card-header card-header-flex">
     <div class="logo">
         <a>
-            <img width="300px" th:src="@{/images/logo.png}">
+            <img width="400px" th:src="@{/images/logo1.png}">
         </a>
     </div>
 
