--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -239,7 +239,8 @@ h3 {
 }
 
 .card {
-    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
+    height: auto;
     margin-bottom: auto;
     width: auto;
     min-width: 1070px;
